--- a/Notebooks/Models/ConvNet.ipynb
+++ b/Notebooks/Models/ConvNet.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "14b1419f",
+   "id": "ded9455b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bc06f71",
+   "id": "cd6f35ee",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5faecd4f",
+   "id": "59019622",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,11 +49,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b570b6a",
+   "id": "b3084aa9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path= \"\""
+    "path= df\"\""
    ]
   }
  ],
