--- a/Notebooks/Models/ConvNet.ipynb
+++ b/Notebooks/Models/ConvNet.ipynb
@@ -2,20 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ded9455b",
+   "execution_count": 5,
+   "id": "08fce3d0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import cv2\n",
-    "import tensorflow as tf\n"
+    "import tensorflow as tf\n",
+    "import PIL"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd6f35ee",
+   "id": "dbcc6509",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -23,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "59019622",
+   "id": "aab49d95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,13 +49,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "002ba694",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NotADirectoryError",
+     "evalue": "[Errno 20] Not a directory: '../../Data/train/.DS_Store'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotADirectoryError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-c0492b9caa4f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;34m\"../../Data/train\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-3-912cade91942>\u001b[0m in \u001b[0;36mcreate_dataset\u001b[0;34m(img_folder)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mdir1\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg_folder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mfile\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg_folder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdir1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m             \u001b[0mimage_path\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg_folder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdir1\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNotADirectoryError\u001b[0m: [Errno 20] Not a directory: '../../Data/train/.DS_Store'"
+     ]
+    }
+   ],
+   "source": [
+    "path= \"../../Data/train\"\n",
+    "\n",
+    "create_dataset(path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f59bde34",
+   "metadata": {},
+   "source": [
+    "- https://towardsdatascience.com/loading-custom-image-dataset-for-deep-learning-models-part-1-d64fa7aaeca6\n",
+    "\n",
+    "- https://www.pluralsight.com/guides/importing-image-data-into-numpy-arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b3084aa9",
+   "id": "d9631c76",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "path= df\"\""
-   ]
+   "source": []
   }
  ],
  "metadata": {
