Loaded and prepped training data w/ labels

--- a/Notebooks/Models/ConvNet.ipynb
+++ b/Notebooks/Models/ConvNet.ipynb
@@ -2,90 +2,164 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "08fce3d0",
+   "execution_count": 45,
+   "id": "00a175f9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import cv2\n",
+    "import sys\n",
     "import tensorflow as tf\n",
-    "import PIL"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dbcc6509",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "aab49d95",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_dataset(img_folder):\n",
-    "   \n",
-    "    img_data_array=[]\n",
-    "    class_name=[]\n",
-    "   \n",
-    "    for dir1 in os.listdir(img_folder):\n",
-    "        for file in os.listdir(os.path.join(img_folder, dir1)):\n",
-    "       \n",
-    "            image_path= os.path.join(img_folder, dir1,  file)\n",
-    "            image= cv2.imread( image_path, cv2.COLOR_BGR2RGB)\n",
-    "            image=cv2.resize(image, (IMG_HEIGHT, IMG_WIDTH),interpolation = cv2.INTER_AREA)\n",
-    "            image=np.array(image)\n",
-    "            image = image.astype('float32')\n",
-    "            image /= 255 \n",
-    "            img_data_array.append(image)\n",
-    "            class_name.append(dir1)\n",
-    "    return img_data_array, class_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "002ba694",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NotADirectoryError",
-     "evalue": "[Errno 20] Not a directory: '../../Data/train/.DS_Store'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotADirectoryError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-c0492b9caa4f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;34m\"../../Data/train\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-3-912cade91942>\u001b[0m in \u001b[0;36mcreate_dataset\u001b[0;34m(img_folder)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mdir1\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg_folder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mfile\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg_folder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdir1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m             \u001b[0mimage_path\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg_folder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdir1\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNotADirectoryError\u001b[0m: [Errno 20] Not a directory: '../../Data/train/.DS_Store'"
-     ]
-    }
-   ],
-   "source": [
-    "path= \"../../Data/train\"\n",
-    "\n",
-    "create_dataset(path)"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f59bde34",
+   "id": "d04741a9",
    "metadata": {},
    "source": [
-    "- https://towardsdatascience.com/loading-custom-image-dataset-for-deep-learning-models-part-1-d64fa7aaeca6\n",
+    "**Load  and prepareTraining data**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "54fdf23a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from load_data import load_images\n",
     "\n",
-    "- https://www.pluralsight.com/guides/importing-image-data-into-numpy-arrays"
+    "horses_path= \"/Users/ksharma/Documents/ML Engineer/Machine Learning/Projects/HorsesHumans/Data/train/horses/*.png\"\n",
+    "humans_path= \"/Users/ksharma/Documents/ML Engineer/Machine Learning/Projects/HorsesHumans/Data/train/humans/*.png\"\n",
+    "\n",
+    "horses_training= load_images(horses_path)\n",
+    "humans_training= load_images(humans_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8816cae",
+   "metadata": {},
+   "source": [
+    "**Check Data**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "8f8a911a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Horses training data: (500, 300, 300, 4)\n",
+      "Humans training data: (527, 300, 300, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Horses training data: {}\".format(horses_training.shape))\n",
+    "print(\"Humans training data: {}\".format(humans_training.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "587b60af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1027, 300, 300, 4)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Concatenate training data\n",
+    "X_train= np.concatenate((horses_training, humans_training), dtype= \"float\")\n",
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "40b280e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1000, 1)"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Create labels. Human : 1, Horse : 0\n",
+    "human_labels= np.full((500,1),1)\n",
+    "horse_labels= np.full((500,1),0)\n",
+    "\n",
+    "y_train= np.concatenate((horse_labels, human_labels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "a78966bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (500,300,300,4) (1,500) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-68-3b9afdcca90f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mhorses_training\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mhorse_labels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (500,300,300,4) (1,500) "
+     ]
+    }
+   ],
+   "source": [
+    "horses_training "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "561de3aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(300, 300, 4)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "horses_training[0].shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9631c76",
+   "id": "064b7646",
    "metadata": {},
    "outputs": [],
    "source": []
