Zero centered data

--- a/Notebooks/Models/Model_Sandbox.ipynb
+++ b/Notebooks/Models/Model_Sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "17e11bac-827e-4653-9302-9f643dee2731",
    "metadata": {},
    "outputs": [],
@@ -21,8 +21,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "35a8514b-61a3-43d7-a920-4c424fd7bea6",
+   "metadata": {},
+   "source": [
+    "**Load Data**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "8a6c24bc-7ace-4fcf-a5a1-f37538a5969f",
    "metadata": {},
    "outputs": [],
@@ -39,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "87a6369c-b46f-47df-8607-376d6ece584d",
    "metadata": {},
    "outputs": [
@@ -59,21 +67,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "777ca338-5399-42eb-afc1-606c57a7d3d7",
+   "metadata": {},
+   "source": [
+    "**Preprocess Data**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "08519d76-7a9d-4346-b633-73eb01b90002",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Assign labels: 1= human, 0 = horse\n",
     "y_train_human= np.full((len(human_train),1), 1)\n",
-    "y_train_horse= np.full((len(horse_train),1), 0)\n"
+    "y_train_horse= np.full((len(horse_train),1), 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "d058ca1b-3e1d-41cc-b4fe-69d3868fccd9",
+   "execution_count": 5,
+   "id": "96cbb3d0-a789-48e6-8598-3b3307b8c032",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Concatenate Training data\n",
+    "X= np.concatenate((horse_train, human_train), axis=0)\n",
+    "y= np.concatenate((y_train_horse, y_train_human), axis= 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "13864b00-ee6e-401d-af21-6b8a2a8ea8c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Zero-center data\n",
+    "training_mean= X.mean()\n",
+    "training_std= X.std()\n",
+    "X= (X - training_mean)/training_std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "75c72122-9842-42cd-91c4-4c9ed6c133e2",
    "metadata": {},
    "outputs": [
     {
@@ -86,10 +127,6 @@
     }
    ],
    "source": [
-    "#Concatenate Training data\n",
-    "X= np.concatenate((horse_train, human_train), axis=0)\n",
-    "y= np.concatenate((y_train_horse, y_train_human), axis= 0)\n",
-    "\n",
     "#Shuffle\n",
     "from sklearn.utils import shuffle\n",
     "X_train, y_train= shuffle(X, y)\n",
@@ -99,136 +136,91 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "2eb8c807-3e24-457d-822c-862535decddd",
+   "cell_type": "markdown",
+   "id": "a076f7c3-1ccd-4a50-af7b-25ae1a07c4dc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "360000"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "np.count_nonzero(test[0]==horse_train[0])"
+    "**Modeling**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "384fda14-ff81-40c4-8302-7e8ec1512699",
+   "execution_count": null,
+   "id": "85a65ffd-3144-43fc-a9ce-73c3242740e2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "91736"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Sanity Check\n",
-    "np.count_nonzero(test[50]==human_train[0])"
+    "#use base model from early computer vision"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "ba4912ca-3b94-4c96-9e08-a1d466576353",
+   "execution_count": null,
+   "id": "686739f8-bd15-42ef-9d5a-fd9b3572c240",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[ 52,  32,  21, 255],\n",
-       "        [ 54,  34,  22, 255],\n",
-       "        [ 58,  36,  23, 255],\n",
-       "        ...,\n",
-       "        [ 89,  70,  57, 255],\n",
-       "        [ 89,  70,  57, 255],\n",
-       "        [ 89,  70,  57, 255]],\n",
-       "\n",
-       "       [[ 41,  22,  13, 255],\n",
-       "        [ 45,  24,  14, 255],\n",
-       "        [ 38,  20,  11, 255],\n",
-       "        ...,\n",
-       "        [ 89,  70,  57, 255],\n",
-       "        [ 89,  70,  57, 255],\n",
-       "        [ 89,  70,  57, 255]],\n",
-       "\n",
-       "       [[ 30,  16,   9, 255],\n",
-       "        [ 25,  13,   7, 255],\n",
-       "        [ 21,  10,   5, 255],\n",
-       "        ...,\n",
-       "        [ 90,  70,  57, 255],\n",
-       "        [ 90,  70,  57, 255],\n",
-       "        [ 90,  70,  57, 255]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[ 70,  69,  68, 255],\n",
-       "        [ 75,  74,  73, 255],\n",
-       "        [ 74,  75,  73, 255],\n",
-       "        ...,\n",
-       "        [ 75,  76,  74, 255],\n",
-       "        [ 80,  81,  79, 255],\n",
-       "        [ 83,  84,  82, 255]],\n",
-       "\n",
-       "       [[ 66,  67,  64, 255],\n",
-       "        [ 71,  71,  69, 255],\n",
-       "        [ 75,  75,  73, 255],\n",
-       "        ...,\n",
-       "        [ 80,  82,  79, 255],\n",
-       "        [ 83,  83,  81, 255],\n",
-       "        [ 83,  84,  81, 255]],\n",
-       "\n",
-       "       [[ 64,  66,  62, 255],\n",
-       "        [ 65,  66,  63, 255],\n",
-       "        [ 67,  67,  65, 255],\n",
-       "        ...,\n",
-       "        [102, 102, 100, 255],\n",
-       "        [ 90,  91,  88, 255],\n",
-       "        [ 86,  87,  84, 255]]], dtype=uint8)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "human_train[0]"
+    "#PyTorch CNN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "6e0ec0c8-a86b-4e6a-96ed-9adf2ed19d2d",
+   "execution_count": null,
+   "id": "cd58d073-f9fb-4a0f-a6d5-4711b7664b0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do not run below this line"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd971727-cf0c-4643-89bf-5531f900f0e6",
+   "metadata": {},
+   "source": [
+    "**Deploy**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a0ecce23-84f9-40fd-ae70-434b773a7c76",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Horse Data: (500, 300, 300, 4) Test Horse Data: (128, 300, 300, 4)\n",
-      "Training Human Data: (500, 300, 300, 4) Test Human Data: (128, 300, 300, 4)\n"
+      "Test data shape: (256, 300, 300, 4) \n",
+      " Training label shape: (256, 1)\n"
      ]
     }
    ],
    "source": [
-    "print(\"Training Horse Data: %s Test Horse Data: %s\" % (horse_train.shape, horse_test.shape))\n",
-    "print(\"Training Human Data: %s Test Human Data: %s\" % (human_train.shape, human_test.shape))"
+    "y_test_human= np.full((len(human_test),1), 1)\n",
+    "y_test_horse= np.full((len(horse_test),1), 0)\n",
+    "\n",
+    "#Concatenate validation set\n",
+    "X= np.concatenate((horse_test, human_test), axis=0)\n",
+    "y= np.concatenate((y_test_horse, y_test_human), axis= 0)\n",
+    "\n",
+    "#Zero-Center data\n",
+    "X= (X- training_mean)/training_std\n",
+    "\n",
+    "#Shuffle\n",
+    "X_test, y_test= shuffle(X, y)\n",
+    "\n",
+    "#Sanity check\n",
+    "print(\"Test data shape: %s \\n Training label shape: %s\" % (X_test.shape, y_test.shape))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5267db16-d02f-43c9-b80e-02b8cc3667ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
